[package]
name = "async-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mio = {version = "0.8.4", features = ["os-poll", "os-ext", "net"]}
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }